# spatial_audio_server

./: Cargo.toml
src/lib/: camera.rs  lib.rs  metres.rs  utils.rs
src/lib/audio/: dbap.rs  detection.rs  detector.rs  fft.rs  output.rs  sound.rs  speaker.rs
src/lib/audio/source/: mod.rs  realtime.rs
src/lib/audio/source/wav/: reader.rs  samples.rs
src/lib/gui/: mod.rs  monitor.rs
src/lib/gui/custom_widget/: sound.rs
src/lib/osc/: output.rs
src/lib/soundscape/: mod.rs
src/lib/soundscape/movement/: agent.rs  mod.rs  ngon.rs
