[package]
name = "audio_server"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]

[profile.release]
debug = true

[[bin]]
name = "audio_server"
path = "src/bin/main.rs"

[lib]
name = "audio_server"
path = "src/lib/lib.rs"

[dependencies]
crossbeam = "0.8.4"
dasp = { version = "0.11.0", features = ["all"] }
fxhash = "0.2"
hound = "3.5"
macro-attr-2018 = "3.0.0"
mindtree_utils = "0.4"
newtype-derive-2018 = "0.2.3"
nannou = "0.19"
nannou_audio = "0.19"
nannou_egui = "0.19"
nannou_osc = "0.19"
num_cpus = "1.8"
pitch_calc = "0.12"
rand_xorshift = "0.3"
rustfft = "6.2"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
slug = "0.1.5"
time_calc = { version = "0.13", features = ["serde"] }
threadpool = "1.8"
walkdir = "2"

[features]
asio = ["nannou_audio/asio"]
test_with_stereo = [] # Compile with this feature to set the max i/o channels as `2`.
